--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   },
   "minimum-stability": "stable",
   "require": {
-    "php": "^5.5|^7.0",
+    "php": "^5.5",
     "ext-json": "*",
     "phpunit/phpunit": "^4.8",
     "kba-team/memory-container": "^1.0",
