--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "ext-json": "*",
     "phpunit/phpunit": "^6.5",
     "kba-team/memory-container": "^1.0",
-    "php-sap/interfaces": "dev-master",
-    "php-sap/common": "dev-master",
+    "php-sap/interfaces": "^3.0",
+    "php-sap/common": "^4.0",
     "php-sap/datetime": "^1.1"
   },
   "autoload": {
