--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,8 @@
     "psr-4": {
       "phpsap\\IntegrationTests\\": "src/"
     }
+  },
+  "require-dev": {
+    "squizlabs/php_codesniffer": "^3.7"
   }
 }
