--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 *               text eol=lf
 .gitattributes  export-ignore
 .gitignore      export-ignore
+.phpcs.xml		export-ignore
 composer.*      export-ignore
 README.md       export-ignore
