--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *               text eol=lf
+.github			export-ignore
 .gitattributes  export-ignore
 .gitignore      export-ignore
 .phpcs.xml		export-ignore
