--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "homepage": "https://php-sap.github.io/",
   "minimum-stability": "stable",
   "require": {
-    "php": "^7.4",
+    "php": ">=7.4",
     "ext-json": "*",
     "phpunit/phpunit": "^9.6",
     "kba-team/memory-container": "^1.0",
