--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
   "homepage": "https://php-sap.github.io/",
   "minimum-stability": "stable",
   "require": {
-    "php": ">=7.4",
+    "php": "^8.1",
     "ext-json": "*",
     "phpunit/phpunit": "^9.6",
     "kba-team/memory-container": "^2.0",
-    "php-sap/interfaces": "^4.0",
-    "php-sap/common": "^5.0"
+    "php-sap/interfaces": "dev-main",
+    "php-sap/common": "dev-main"
   },
   "autoload": {
     "psr-4": {
