--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "ext-json": "*",
     "phpunit/phpunit": "^9.6",
     "kba-team/memory-container": "^2.0",
-    "php-sap/interfaces": "dev-main",
-    "php-sap/common": "dev-main"
+    "php-sap/interfaces": "^5.0",
+    "php-sap/common": "^6.0"
   },
   "autoload": {
     "psr-4": {
